spring boot jpa uml 3

--- a/src/BankingSystemJpa/src/main/resources/application.properties
+++ b/src/BankingSystemJpa/src/main/resources/application.properties
@@ -4,3 +4,7 @@ spring.datasource.username=root
 spring.datasource.password=root
 
 spring.jpa.hibernate.ddl-auto=update
+
+
+logging.file=C:/Users/trainee/Documents/workspace-sts-3.9.3.RELEASE/BankingSystemJpa/file2.log
+logging.level.root=info
