--- a/src/BankingSystemJpa/pom.xml
+++ b/src/BankingSystemJpa/pom.xml
@@ -58,6 +58,12 @@
 			<artifactId>spring-boot-starter-log4j</artifactId>
 			<version>1.3.8.RELEASE</version>
 		</dependency>
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-core</artifactId>
+			<version>2.7.22</version>
+			<scope>test</scope>
+		</dependency>
 
 
 	</dependencies>
