Mongodb AuditLog+bankingsJPA+eureka MicroServ 1

--- a/src/BankingSystemJpa/src/main/resources/application.properties
+++ b/src/BankingSystemJpa/src/main/resources/application.properties
@@ -8,3 +8,7 @@ spring.jpa.hibernate.ddl-auto=update
 
 logging.file=C:/Users/trainee/Documents/workspace-sts-3.9.3.RELEASE/BankingSystemJpa/file2.log
 logging.level.root=info
+
+spring.application.name=BankingSystemJpa
+spring.cloud.config.uri=http://localhost:8760
+eureka.client.service-url.defaultZone=http://localhost:8760/eureka
