--- a/src/AuditLogMicroServ/src/main/resources/application.properties
+++ b/src/AuditLogMicroServ/src/main/resources/application.properties
@@ -2,3 +2,6 @@ spring.data.mongodb.host=127.0.0.1
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=auditDatabase
 server.port=8888
+
+spring.application.name=AuditLogMicroServ
+eureka.client.service-url.defaultZone=http://localhost:8760/eureka
