Mongodb AuditLog+bankingsJPA+eureka MicroServ 6

--- a/src/configClient/src/main/resources/bootstrap.properties
+++ b/src/configClient/src/main/resources/bootstrap.properties
@@ -1,5 +1,5 @@
-#spring.profiles.active=development
- 
+spring.profiles.active=development
+spring.application.name=config-server-client
 spring.cloud.config.uri=http://localhost:8777
 server.port=8778
 management.security.enabled=false
