--- a/src/configServer/src/main/resources/bootstrap.properties
+++ b/src/configServer/src/main/resources/bootstrap.properties
@@ -1,2 +1,2 @@
 server.port=8777
-spring.cloud.config.server.git.uri=${trainee}\Desktop\config-server-repo
+spring.cloud.config.server.git.uri=https://github.com/jaiswalabhishek543/configServerRepo.git
