--- a/src/AuditLogMicroServ/src/main/resources/application.properties
+++ b/src/AuditLogMicroServ/src/main/resources/application.properties
@@ -5,3 +5,8 @@ server.port=8888
 
 spring.application.name=AuditLogMicroServ
 eureka.client.service-url.defaultZone=http://localhost:8760/eureka
+
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+jsa.rabbitmq.queue=jsa.queue
