--- a/src/BankingSystemJpa/pom.xml
+++ b/src/BankingSystemJpa/pom.xml
@@ -75,6 +75,12 @@
 			<artifactId>spring-cloud-starter-feign</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-amqp</artifactId>
+		</dependency>
+
+
 
 	</dependencies>
 	<dependencyManagement>
