--- a/src/BankingSystemJpa/src/main/resources/application.properties
+++ b/src/BankingSystemJpa/src/main/resources/application.properties
@@ -12,3 +12,10 @@ logging.level.root=info
 spring.application.name=BankingSystemJpa
 spring.cloud.config.uri=http://localhost:8760
 eureka.client.service-url.defaultZone=http://localhost:8760/eureka
+
+
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+jsa.rabbitmq.exchange=jsa.direct
+jsa.rabbitmq.routingkey=jsa.routingkey
