--- a/src/AuditLogMicroServ/pom.xml
+++ b/src/AuditLogMicroServ/pom.xml
@@ -53,12 +53,8 @@
 			<scope>test</scope>
 		</dependency>
 
-
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-amqp</artifactId>
-		</dependency>
-
+		<!-- <dependency> <groupId>org.springframework.boot</groupId> <artifactId>spring-boot-starter-amqp</artifactId> 
+			</dependency> -->
 
 
 	</dependencies>
